--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
