--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.5.1",
     "path": "^0.12.7"
   }
