--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "bcrypt": "^5.1.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "dotenv": "^16.0.3",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.5.1",
-    "path": "^0.12.7"
+    "nodemailer": "^6.9.2",
+    "path": "^0.12.7",
+    "uuid": "^9.0.0"
   }
 }
